@@ -1,3 +1,9 @@
+2007-05-31  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/BaseAssemblyResolver.cs:
+		Improve resolve, works for people requiring
+		.net 1.0 assemblies when they only have 1.1.
+
 2007-05-30  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil/DefaultAssemblyResolver.cs:
